force-app/main/default/objects/Rve_Exam_Application__c/Rve_Exam_Application__c.object-meta.xml
<CustomObject>
    <label>REVA Exam Application</label>
    <nameField>
        <label>Exam Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REVA Exam Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>