force-app/main/default/objects/Rve_Exam_Application__c/fields/FlowExam__c.field-meta.xml
<CustomField>
    <fullName>FlowExam__c</fullName>
    <formula>Rve_Exam_Notification__r.Rve_Start_Date__c-30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow_Examdate</label>
    <type>Date</type>
</CustomField>