force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rve_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>