force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Rve_Application_Number__c</fullName>
    <label>Application Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>