force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Rve_Applied_Date__c</fullName>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>