force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Exam_Notification__c.field-meta.xml
<CustomField>
    <fullName>Rve_Exam_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam Notification</label>
    <referenceTo>Rve_Exam_Notification__c</referenceTo>
    <relationshipName>Exam_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>