force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Logisys_Field_Check__c.field-meta.xml
<CustomField>
    <fullName>Rve_Logisys_Field_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logisys Field Check</label>
    <type>Checkbox</type>
</CustomField>