force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Rve_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>