force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Rve_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>