force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Rve_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>