force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Rve_Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>