force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Status__c.field-meta.xml
<CustomField>
    <fullName>Rve_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>