force-app/main/default/objects/Rve_Exam_Application__c/fields/Rve_Student__c.field-meta.xml
<CustomField>
    <fullName>Rve_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Exam_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>