force-app/main/default/objects/Rve_Exam_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rve_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>